# MLOps-Lab3

./: .gitignore  Dockerfile  Makefile  README.md  app.py  classes.json  model.onnx  pyproject.toml
.github/workflows/: ci.yml
api/: api.py
cli/: cli.py
mylib/: logic.py
src/: export_model.py  train.py
templates/: home.html
tests/: test_api.py  test_cli.py  test_logic.py  test_model.py
